--- a/app/globals.css
+++ b/app/globals.css
@@ -25,3 +25,20 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+*{
+  margin: 0;
+  padding: 0;
+  
+}
+.spin{
+  animation: spin 1s linear infinite;
+}
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
